--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
 
+<a-assets>
+  <audio id="pop-sound" src="sharp-pop-328170.mp3"></audio>
+</a-assets>
+
+
   <body>
     <div id="ui">
       <div id="menu">
