--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
 <a-assets>
-  <audio id="pop-sound" src="sharp-pop-328170.mp3"></audio>
+  <audio id="pop-sound" src="./sounds/sharp-pop-328170.mp3"></audio>
 </a-assets>
 
 
