--- a/index.html
+++ b/index.html
@@ -5,13 +5,10 @@
     <title>VR Aim Trainer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/aframe-environment-component@1.3.1/dist/aframe-environment-component.min.js"></script>
     <link rel="stylesheet" href="style.css" />
+    <style> html, body { margin:0; padding:0; overflow:hidden; background:#000; } </style>
   </head>
-
-<a-assets>
-  <audio id="pop-sound" src="./sounds/sharp-pop-328170.mp3"></audio>
-</a-assets>
-
 
   <body>
     <div id="ui">
@@ -28,20 +25,30 @@
     </div>
 
     <a-scene>
+      <a-assets>
+        <audio id="pop-sound" src="./sounds/sharp-pop-328170.mp3"></audio>
+      </a-assets>
+
+      <a-entity environment="preset: forest; groundColor: #444; dressingAmount: 20; lighting: none;"></a-entity>
+      <a-entity light="type: ambient; intensity: 1; color: #ffffff;"></a-entity>
+      <a-entity light="type: directional; intensity: 0.6; color: #ffffff;" position="2 5 -3"></a-entity>
+
       <!-- Kamera mit Gaze Cursor -->
-      <a-entity camera look-controls>
-        <a-cursor fuse="true" fuse-timeout="100" color="#FF0000"></a-cursor>
+      <a-entity position="0 3 15">
+        <a-camera>
+          <a-cursor
+            fuse="true"
+            fuse-timeout="100"
+            color="#FF0000"
+            raycaster="objects: .clickable"
+            animation__click="property: scale; startEvents: click; from: 1 1 1; to: 0.5 0.5 0.5; dur: 150; dir: alternate"
+          ></a-cursor>
+        </a-camera>
       </a-entity>
 
-      <!-- Licht -->
-      <a-entity light="type: ambient; color: #BBB"></a-entity>
-      <a-entity light="type: directional; color: #FFF; intensity: 0.5" position="1 3 1"></a-entity>
-
-      <!-- Boden -->
-      <a-plane rotation="-90 0 0" width="20" height="20" color="#333"></a-plane>
-
-      <!-- Target Container -->
+      <!-- ✅ FIX: Container für Ziele -->
       <a-entity id="targetContainer"></a-entity>
+
     </a-scene>
 
     <script src="script.js"></script>
