--- a/index.html
+++ b/index.html
@@ -1,56 +1,95 @@
 <!DOCTYPE html>
 <html lang="de">
-  <head>
-    <meta charset="UTF-8" />
-    <title>VR Aim Trainer</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/aframe-environment-component@1.3.1/dist/aframe-environment-component.min.js"></script>
-    <link rel="stylesheet" href="style.css" />
-    <style> html, body { margin:0; padding:0; overflow:hidden; background:#000; } </style>
-  </head>
 
-  <body>
-    <div id="ui">
-      <div id="menu">
-        <p>Wähle Schwierigkeitsgrad:</p>
-        <button onclick="startGame('easy')">Einfach</button>
-        <button onclick="startGame('medium')">Mittel</button>
-        <button onclick="startGame('hard')">Schwer</button>
-      </div>
-      <div id="scoreboard" style="display:none;">
-        <p>Zeit: <span id="time">25</span> s</p>
-        <p>Treffer: <span id="score">0</span></p>
-      </div>
-    </div>
+<head>
+  <meta charset="UTF-8" />
+  <title>VR Aim Trainer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/aframe-environment-component@1.3.1/dist/aframe-environment-component.min.js"></script>
+  <link rel="stylesheet" href="style.css" />
+  <style>
+    html,
+    body {
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      background: #000;
+    }
+  </style>
+</head>
 
-    <a-scene>
-      <a-assets>
-        <audio id="pop-sound" src="./sounds/sharp-pop-328170.mp3"></audio>
-      </a-assets>
+<body>
+  <a-scene>
+    <!-- Audio -->
+    <a-assets>
+      <audio id="pop-sound" src="./sounds/sharp-pop-328170.mp3"></audio>
+    </a-assets>
 
-      <a-entity environment="preset: forest; groundColor: #444; dressingAmount: 20; lighting: none;"></a-entity>
-      <a-entity light="type: ambient; intensity: 1; color: #ffffff;"></a-entity>
-      <a-entity light="type: directional; intensity: 0.6; color: #ffffff;" position="2 5 -3"></a-entity>
+    <!-- Umgebung -->
+    <a-entity environment="preset: forest; ground: noise; groundColor: #444; dressingAmount: 2500;"></a-entity>
+    <a-entity light="type: ambient; intensity: 0.8;"></a-entity>
+    <a-entity light="type: directional; intensity: 0.2;" position="2 5 -3"></a-entity>
 
-      <!-- Kamera mit Gaze Cursor -->
-      <a-entity position="0 3 15">
-        <a-camera>
-          <a-cursor
-            fuse="true"
-            fuse-timeout="100"
-            color="#FF0000"
-            raycaster="objects: .clickable"
-            animation__click="property: scale; startEvents: click; from: 1 1 1; to: 0.5 0.5 0.5; dur: 150; dir: alternate"
-          ></a-cursor>
-        </a-camera>
-      </a-entity>
+    <!-- Kamera + Score UI -->
+    <a-entity position="0 3 5">
+      <a-camera>
+        <a-cursor fuse="true" fuse-timeout="50" color="#FF0000" raycaster="objects: .clickable"></a-cursor>
 
-      <!-- ✅ FIX: Container für Ziele -->
-      <a-entity id="targetContainer"></a-entity>
+        <!-- Scoreboard (HUD) -->
+        <a-entity id="scoreboard" position="0 -0.3 -1" visible="false">
+          <a-text id="scoreText" value="Treffer: 0" position="0 0.1 0" color="white" align="center"></a-text>
+          <a-text id="timeText" value="Zeit: 25s" position="0 -0.1 0" color="white" align="center"></a-text>
+        </a-entity>
+      </a-camera>
+    </a-entity>
 
-    </a-scene>
+    <!-- Ziel-Container -->
+    <a-entity id="targetContainer"></a-entity>
+
+    <a-entity id="menu" position="-4 4 5" rotation="0 90 0">
+      <a-text value="Wähle Schwierigkeitsgrad:" align="center" position="0 0.5 0" color="#FFF"></a-text>
+
+      <a-plane id="btn-easy" class="clickable" color="#444" width="1.2" height="0.3" position="0 0.2 0"
+        event-set__enter="_event: mouseenter; color: #666" event-set__leave="_event: mouseleave; color: #444">
+        <a-text value="Einfach" align="center" position="0 0 0.01" color="#FFF"></a-text>
+      </a-plane>
+
+      <a-plane id="btn-medium" class="clickable" color="#444" width="1.2" height="0.3" position="0 -0.2 0"
+        event-set__enter="_event: mouseenter; color: #666" event-set__leave="_event: mouseleave; color: #444">
+        <a-text value="Mittel" align="center" position="0 0 0.01" color="#FFF"></a-text>
+      </a-plane>
+
+      <a-plane id="btn-hard" class="clickable" color="#444" width="1.2" height="0.3" position="0 -0.6 0"
+        event-set__enter="_event: mouseenter; color: #666" event-set__leave="_event: mouseleave; color: #444">
+        <a-text value="Schwer" align="center" position="0 0 0.01" color="#FFF"></a-text>
+      </a-plane>
+    </a-entity>
+
+    <!-- Endbildschirm -->
+    <a-entity id="endScreen" position="-3 3 5" rotation="0 90 0" visible="false">
+      <a-text id="endText" value="Zeit abgelaufen!" align="center" position="0 0.4 0" rotation="0 90 0"
+        color="white"></a-text>
+
+      <a-plane id="btn-restart" class="clickable" color="#444" width="1.5" height="0.4" position="0 -0.2 0"
+        event-set__enter="_event: mouseenter; color: #666" event-set__leave="_event: mouseleave; color: #444">
+        <a-text value="Nochmal spielen" align="center" position="0 0 0.01" color="#FFF"></a-text>
+      </a-plane>
+    </a-entity>
+    <!-- Endbildschirm (noch weiter links) -->
+    <a-entity id="endScreen" position="-3 3 5" rotation="0 90 0" visible="false">
+      <a-text id="endText" value="Zeit abgelaufen!" align="center" position="0 0.4 0" rotation="0 90 0"
+        color="white"></a-text>
+
+      <a-plane id="restartButton" class="clickable" color="#444" width="1.5" height="0.4" position="0 -0.2 0"
+        event-set__enter="_event: mouseenter; color: #666" event-set__leave="_event: mouseleave; color: #444">
+        <a-text value="Nochmal spielen" align="center" position="0 0 0.01" color="#FFF"></a-text>
+      </a-plane>
+    </a-entity>
 
     <script src="script.js"></script>
-  </body>
+  </a-scene>
+</body>
+
 </html>
