--- a/index.html
+++ b/index.html
@@ -22,23 +22,29 @@
 
 <body>
   <a-scene>
+    <a-assets>
+      <img id="panelTexture" src="assets/portal.png">
+    </a-assets>
+
     <!-- Audio -->
     <a-assets>
-      <audio id="pop-sound" src="./sounds/sharp-pop-328170.mp3"></audio>
+      <audio id="pop-sound" src="./assets/sharp-pop-328170.mp3"></audio>
     </a-assets>
 
     <!-- Umgebung -->
-    <a-entity environment="preset: forest; ground: noise; groundColor: #444; dressingAmount: 2500;"></a-entity>
+    <a-entity environment="preset: forest; ground: noise; groundColor: #444; dressingAmount: 250;"></a-entity>
     <a-entity light="type: ambient; intensity: 0.8;"></a-entity>
     <a-entity light="type: directional; intensity: 0.2;" position="2 5 -3"></a-entity>
 
     <a-entity id="highscoreBoard" position="7 4 1.5" rotation="0 -70 0">
       <a-box width="4" height="3.5" depth="0.2" color="#222" opacity="1"></a-box>
-      <a-box width="4.2" height="0.4" depth="0.225" color="#444" opacity="1" position="0 -1 0.1" ></a-box>
-      <a-box width="0.3" height="2.8" depth="0.225" color="#444" opacity="1" position="0 -2.3 0.1" ></a-box>
-      <a-box width="2.2" height="0.3" depth="1.2" color="#444" opacity="1" position="0 -3.5 0.1" ></a-box>
+      <a-box width="4.2" height="0.4" depth="0.225" color="#444" opacity="1" position="0 -1 0.1"></a-box>
+      <a-box width="0.3" height="2.8" depth="0.225" color="#444" opacity="1" position="0 -2.3 0.1"></a-box>
+      <a-box width="2.2" height="0.3" depth="1.2" color="#444" opacity="1" position="0 -3.5 0.1"></a-box>
       <a-text id="highscoreText" value="" color="white" align="center" position="0 1 0.1"></a-text>
     </a-entity>
+
+
 
 
     <!-- Kamera + 2 Cursorn + HUD -->
@@ -93,7 +99,14 @@
       </a-plane>
     </a-entity>
 
-    <script src="script.js"></script>
+    <!-- Portal -->
+    <a-box width="1" height="6" depth="1.5" color="#222" transparent="true" position="1.8 3 14.25"></a-box>
+    <a-box width="1" height="6" depth="1.5" color="#222" transparent="true" position="-1.8 3 14.25"></a-box>
+    <a-box width="4" height="1" depth="1.5" color="#222" transparent="true" position="0 5.5 14.25" ></a-box>a-box>
+    <a-box width="2" height="2" depth="0.2" src="#panelTexture" transparent="true" position="0 2 12"></a-plane>
+      <a-box width="2" height="2" depth="0.2" src="#panelTexture" transparent="true" position="0 2 0-5"></a-plane>
+
+        <script src="script.js"></script>
   </a-scene>
 </body>
 
