--- a/index.html
+++ b/index.html
@@ -25,12 +25,20 @@
     <a-assets>
       <img id="panelTexture" src="assets/portal.png">
       <audio id="pop-sound" src="./assets/sharp-pop-328170.mp3"></audio>
+      <a-asset-item id="mazda" src="assets/Mazda RX-7.glb"></a-asset-item>
+      <a-asset-item id="rangerover" src="assets/Range Rover.glb"></a-asset-item>
+      <a-asset-item id="rover" src="assets/Rover.glb"></a-asset-item>
+      <a-asset-item id="gun" src="assets/Pistol (1).glb"></a-asset-item>
     </a-assets>
 
 
 
     <!-- Umgebung -->
-    <a-entity environment="preset: forest; ground: noise; groundColor: #444; dressingAmount: 750;"></a-entity>
+    <!-- Nur EINE Environment-Entity -->
+    <a-entity id="environment"
+      environment="preset: forest; ground: noise; groundColor: #444; dressingAmount: 750;"></a-entity>
+
+
     <a-entity light="type: ambient; intensity: 0.8;"></a-entity>
     <a-entity light="type: directional; intensity: 0.2;" position="2 5 -3"></a-entity>
 
@@ -42,6 +50,26 @@
       <a-text id="highscoreText" value="" color="white" align="center" position="0 1 0.1"></a-text>
     </a-entity>
 
+    <a-entity id="forestObjects">
+      <a-entity gltf-model="#rangerover" rotation=" 0 29 0" position="-15 1.65 -5" scale=" 1.25 1.25 1.25"></a-entity>
+      <a-entity gltf-model="#mazda" rotation=" 3 -75 0" position="15 0 8" scale="2 2 2 "></a-entity>
+    </a-entity>
+
+    <a-entity id="starryObjects" visible="false">
+      <a-entity gltf-model="#mazda" rotation=" 3 -75 0" position="10 0 8" scale="2 2 2 "></a-entity>
+      <a-entity gltf-model="#rover" rotation="-15 25 5" position="-30 1 -5"></a-entity>
+      <a-entity gltf-model="#rover" rotation="-5 0 0" scale="0.7 0.7 0.7" position="-12 0.7 20"></a-entity>
+      <a-entity gltf-model="#rover" rotation="-5 0 0" scale="0.7 0.7 0.7" position="-6 0.7 20"></a-entity>
+      <a-entity gltf-model="#rover" rotation="-5 0 0" scale="0.7 0.7 0.7" position="0 0.7 20"></a-entity>
+
+      <a-entity gltf-model="#rover" rotation="-5 0 0" scale="0.7 0.7 0.7" position="-12 0.7 30"></a-entity>
+      <a-entity gltf-model="#rover" rotation="-5 0 0" scale="0.7 0.7 0.7" position="-6 0.7 30"></a-entity>
+      <a-entity gltf-model="#rover" rotation="-5 0 0" scale="0.7 0.7 0.7" position="0 0.7 30"></a-entity>
+
+      <a-entity gltf-model="#rover" rotation="-5 0 0" scale="0.7 0.7 0.7" position="-12 0.7 40"></a-entity>
+      <a-entity gltf-model="#rover" rotation="-5 0 0" scale="0.7 0.7 0.7" position="-6 0.7 40"></a-entity>
+      <a-entity gltf-model="#rover" rotation="-5 0 0" scale="0.7 0.7 0.7" position="0 0.7 40"></a-entity>
+    </a-entity>
 
 
 
@@ -56,6 +84,7 @@
         <a-cursor id="menuCursor" fuse="false" color="#00FF00" raycaster="objects: .menu-clickable"></a-cursor>
 
         <!-- Scoreboard -->
+        <a-entity id="gun" gltf-model="#gun" position="1 -1 -1" scale="0.7 0.6 0.7" rotation="0 0 0"></a-entity>
         <a-entity id="scoreboard" position="0 -0.3 -1" visible="false">
           <a-text id="scoreText" value="Treffer: 0" position="0 0.1 -1" color="white" align="center"></a-text>
           <a-text id="timeText" value="Zeit: 25s" position="0 -0.1 -1" color="white" align="center"></a-text>
@@ -97,14 +126,16 @@
       </a-plane>
     </a-entity>
 
-    <!-- Portal -->
-    <a-box width="1" height="6" depth="1.5" color="#222" transparent="true" position="1.8 3 14.25"></a-box>
-    <a-box width="1" height="6" depth="1.5" color="#222" transparent="true" position="-1.8 3 14.25"></a-box>
-    <a-box width="4" height="1" depth="1.5" color="#222" transparent="true" position="0 5.5 14.25"></a-box>a-box>
-    <a-box class="portalStarry menu-clickable" width="3" height="3" depth="0.2" src="#panelTexture"
-      transparent="true" position="0 1.5 14.25"></a-box>
-    <a-box class="portalStarry menu-clickable" width="3" height="3" depth="0.2" src="#panelTexture"
-      transparent="true" position="0 3.5 14.25"></a-box>
+    <!-- Portale -->
+    <a-box class="portalStarry menu-clickable" width="3" height="3" depth="0.2" src="#panelTexture" transparent="true"
+      position="0 1.5 14.25" visible="true"></a-box>
+    <a-box class="portalStarry menu-clickable" width="3" height="3" depth="0.2" src="#panelTexture" transparent="true"
+      position="0 3.5 14.25" visible="true"></a-box>
+
+    <a-box class="portalForrest menu-clickable" width="3" height="3" depth="0.2" src="#panelTexture" transparent="true"
+      position="0 1.5 18.25" visible="false"></a-box>
+    <a-box class="portalForrest menu-clickable" width="3" height="3" depth="0.2" src="#panelTexture" transparent="true"
+      position="0 3.5 18.25" visible="false"></a-box>
 
     <script src="script.js"></script>
   </a-scene>
