Gaaaanz viel Deko

--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
       <a-asset-item id="rangerover" src="assets/Range Rover.glb"></a-asset-item>
       <a-asset-item id="rover" src="assets/Rover.glb"></a-asset-item>
       <a-asset-item id="gun" src="assets/Pistol (1).glb"></a-asset-item>
+      <a-asset-item id="spaceship" src="assets/Spaceship.glb"></a-asset-item>
+      <a-asset-item id="moonbase" src="assets/Space Base Modules.glb"></a-asset-item>
+      <a-asset-item id="shuttle" src="assets/Space Shuttle.glb"></a-asset-item>
+      <a-asset-item id="tank" src="assets/Tank.glb"></a-asset-item>
+      <a-asset-item id="cat" src="assets/Cat.glb"></a-asset-item>
+      #<a-asset-item id="bear" src="assets/Black bear.glb"></a-asset-item>
     </a-assets>
 
 
@@ -51,13 +57,20 @@
     </a-entity>
 
     <a-entity id="forestObjects">
-      <a-entity gltf-model="#rangerover" rotation=" 0 29 0" position="-15 1.65 -5" scale=" 1.25 1.25 1.25"></a-entity>
-      <a-entity gltf-model="#mazda" rotation=" 3 -75 0" position="15 0 8" scale="2 2 2 "></a-entity>
+      <a-entity gltf-model="#rangerover" rotation=" 0 29 0" position="-10 1.65 -5" scale=" 1.25 1.25 1.25"></a-entity>
+      <a-entity gltf-model="#mazda" rotation=" 3 -75 0" position="15 0 15" scale="2 2 2 "></a-entity>
+      <a-entity gltf-model="#tank" rotation="0 90 0" scale="1.5 1 1" position="0 1 -15"></a-entity>
+      <a-entity gltf-model="#cat" rotation="0 90 0" scale="0.025 0.025 0.025" position="-8.5 3 -2.5"></a-entity>
+      <a-entity gltf-model="#bear" rotation="-5 -90 0" scale="0.25 0.25 0.25" position="8 0.25 6"></a-entity>
     </a-entity>
 
     <a-entity id="starryObjects" visible="false">
       <a-entity gltf-model="#mazda" rotation=" 3 -75 0" position="10 0 8" scale="2 2 2 "></a-entity>
       <a-entity gltf-model="#rover" rotation="-15 25 5" position="-30 1 -5"></a-entity>
+      <a-entity gltf-model="#spaceship" rotation="26 80 15" position="-14 18 -15" scale="1 1 1"></a-entity>
+      <a-entity gltf-model="#shuttle" rotation="0 0 0  " position="-40 15 -55" scale="0.6 0.6 0.6"></a-entity>
+      <a-entity gltf-model="#moonbase" rotation="0 90 0" position="-25 0.5 -15" scale="3 3 3"></a-entity>
+
       <a-entity gltf-model="#rover" rotation="-5 0 0" scale="0.7 0.7 0.7" position="-12 0.7 20"></a-entity>
       <a-entity gltf-model="#rover" rotation="-5 0 0" scale="0.7 0.7 0.7" position="-6 0.7 20"></a-entity>
       <a-entity gltf-model="#rover" rotation="-5 0 0" scale="0.7 0.7 0.7" position="0 0.7 20"></a-entity>
